fix: find by plug type